fix for boxes below being mis-aligned

--- a/web/hitparade/static/src/less/hp.less
+++ b/web/hitparade/static/src/less/hp.less
@@ -21,7 +21,8 @@
   	}
   	div.hp-rectangle, div.hp-rectangle-ls {
   		width: 90%;
-  		left: initial;
+        left: 0%;
+        margin-left: 15px;
   	}
   	div.hp-panel-row-end, div.hp-panel-row-start{
   		justify-content: center;
@@ -120,7 +121,8 @@
   	}
   	div.hp-rectangle, div.hp-rectangle-ls {
   		width: 90%;
-  		left: initial;
+        left: 0%;
+        margin-left: 15px;
   	}
   	div.hp-panel-row-end, div.hp-panel-row-start{
   		justify-content: center;
@@ -326,7 +328,8 @@
   	}
   	div.hp-rectangle, div.hp-rectangle-ls {
   		width: 90%;
-  		left: initial;
+        left: 0%;
+        margin-left: 15px;
   	}
   	div.hp-panel-row-end, div.hp-panel-row-start{
   		justify-content: center;
@@ -490,8 +493,9 @@
 
   	}
   	div.hp-rectangle, div.hp-rectangle-ls {
-  		width: 90%;
-  		left: initial;
+  		width: 90%; 
+        left: 0%;
+        margin-left: 15px;
   	}
   	img.hp-why-coin-image{
  			max-width: 125px;
